Opened 10 years ago
Closed 10 years ago
#11416 closed bug (fixed)
New network preflet doesn't remember
Reported by: | dsuden | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Network | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
If I open the new network preflet, the options are there to set the mode to DHCP or Static. If I choose Static, and type in an IP address, then close and restart the preflet, the IP I typed in stays, but the mode has changed to DHCP. After a reboot, I think I've also seen it reassign the IP to something other than what I typed in. Haiku version 48222
Change History (2)
comment:1 by , 10 years ago
Component: | Network & Internet/IPv4 → Preferences/Network |
---|---|
Owner: | changed from | to
Status: | new → assigned |
comment:2 by , 10 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev48233.