Network preferences: Set the "auto configuration" flag.

Fixes #11416.